--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="react-app"></div>
 
-    <script>
+    <script type="text/babel">
         class Header extends React.Component {
             constructor(props) {
                 super(props);
@@ -240,6 +240,7 @@
         );
     </script>
 
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
